Alteracao/trabalho/y.output
Terminals unused in grammar

   LABEL
   TYPE
   ARRAY
   OF
   FUNCTION
   GOTO


State 88 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 bloco: parte_declara_vars comando_composto
    4      | parte_de_declaracao_de_subrotinas

    5 $@2: %empty

    6 parte_declara_vars: $@2 var

    7 var: VAR declara_vars
    8    | %empty

    9 declara_vars: declara_vars declara_var
   10             | declara_var

   11 $@3: %empty

   12 declara_var: $@3 lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA

   13 tipo: IDENT

   14 lista_id_var: lista_id_var VIRGULA IDENT
   15             | IDENT

   16 lista_idents: lista_idents VIRGULA IDENT
   17             | IDENT

   18 parte_de_declaracao_de_subrotinas: declaracao_de_procedimento

   19 declaracao_de_procedimento: PROCEDURE IDENT ABRE_PARENTESES parametros_formais FECHA_PARENTESES PONTO_E_VIRGULA bloco

   20 parametros_formais: secao_parametros_formais
   21                   | parametros_formais PONTO_E_VIRGULA secao_parametros_formais

   22 secao_parametros_formais: lista_idents DOIS_PONTOS IDENT
   23                         | VAR lista_idents DOIS_PONTOS IDENT

   24 comando_composto: T_BEGIN comandos T_END

   25 comandos: comando_sem_rotulo
   26         | NUMERO DOIS_PONTOS comando_sem_rotulo
   27         | comandos PONTO_E_VIRGULA comandos
   28         | %empty

   29 comando_sem_rotulo: atribui
   30                   | comando_condicional
   31                   | comando_repetitivo

   32 atribui: variavel ATRIBUICAO expressao

   33 comando_condicional: if_then cond_else

   34 $@4: %empty

   35 if_then: IF expressao $@4 THEN comando_sem_rotulo

   36 $@5: %empty

   37 cond_else: ELSE $@5 comando_sem_rotulo
   38          | %empty

   39 $@6: %empty

   40 $@7: %empty

   41 comando_repetitivo: WHILE $@6 expressao DO $@7 T_BEGIN comandos T_END PONTO_E_VIRGULA

   42 expressao: exp_simples
   43          | exp_simples relacao exp_simples

   44 relacao: IGUAL
   45        | DIFERENTE
   46        | MENOR_QUE
   47        | MAIOR_QUE
   48        | MENOR_OU_IGUAL
   49        | MAIOR_OU_IGUAL

   50 exp_simples: termo
   51            | SOMA termo
   52            | SUBTRACAO termo
   53            | exp_simples SOMA termo
   54            | exp_simples SUBTRACAO termo
   55            | exp_simples OR termo

   56 termo: fator
   57      | termo PRODUTO fator
   58      | termo DIVISAO fator
   59      | termo AND fator

   60 fator: variavel
   61      | NUMERO
   62      | ABRE_PARENTESES expressao FECHA_PARENTESES
   63      | NOT fator

   64 variavel: IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 2
ABRE_PARENTESES (259) 2 19 62
FECHA_PARENTESES (260) 2 19 62
VIRGULA (261) 14 16
PONTO_E_VIRGULA (262) 2 12 19 21 27 41
DOIS_PONTOS (263) 12 22 23 26
PONTO (264) 2
T_BEGIN (265) 24 41
T_END (266) 24 41
VAR (267) 7 23
ATRIBUICAO (268) 32
IGUAL (269) 44
DIFERENTE (270) 45
MENOR_QUE (271) 46
MAIOR_QUE (272) 47
MENOR_OU_IGUAL (273) 48
MAIOR_OU_IGUAL (274) 49
SOMA (275) 51 53
SUBTRACAO (276) 52 54
PRODUTO (277) 57
DIVISAO (278) 58
OR (279) 55
AND (280) 59
NOT (281) 63
NUMERO (282) 26 61
IDENT (283) 2 13 14 15 16 17 19 22 23 64
WHILE (284) 41
LABEL (285)
TYPE (286)
ARRAY (287)
OF (288)
PROCEDURE (289) 19
FUNCTION (290)
GOTO (291)
IF (292) 35
THEN (293) 35
ELSE (294) 37
DO (295) 41
LOWER_THAN_ELSE (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
programa (43)
    on left: 2, on right: 0
$@1 (44)
    on left: 1, on right: 2
bloco (45)
    on left: 3 4, on right: 2 19
parte_declara_vars (46)
    on left: 6, on right: 3
$@2 (47)
    on left: 5, on right: 6
var (48)
    on left: 7 8, on right: 6
declara_vars (49)
    on left: 9 10, on right: 7 9
declara_var (50)
    on left: 12, on right: 9 10
$@3 (51)
    on left: 11, on right: 12
tipo (52)
    on left: 13, on right: 12
lista_id_var (53)
    on left: 14 15, on right: 12 14
lista_idents (54)
    on left: 16 17, on right: 2 16 22 23
parte_de_declaracao_de_subrotinas (55)
    on left: 18, on right: 4
declaracao_de_procedimento (56)
    on left: 19, on right: 18
parametros_formais (57)
    on left: 20 21, on right: 19 21
secao_parametros_formais (58)
    on left: 22 23, on right: 20 21
comando_composto (59)
    on left: 24, on right: 3
comandos (60)
    on left: 25 26 27 28, on right: 24 27 41
comando_sem_rotulo (61)
    on left: 29 30 31, on right: 25 26 35 37
atribui (62)
    on left: 32, on right: 29
comando_condicional (63)
    on left: 33, on right: 30
if_then (64)
    on left: 35, on right: 33
$@4 (65)
    on left: 34, on right: 35
cond_else (66)
    on left: 37 38, on right: 33
$@5 (67)
    on left: 36, on right: 37
comando_repetitivo (68)
    on left: 41, on right: 31
$@6 (69)
    on left: 39, on right: 41
$@7 (70)
    on left: 40, on right: 41
expressao (71)
    on left: 42 43, on right: 32 35 41 62
relacao (72)
    on left: 44 45 46 47 48 49, on right: 43
exp_simples (73)
    on left: 50 51 52 53 54 55, on right: 42 43 53 54 55
termo (74)
    on left: 56 57 58 59, on right: 50 51 52 53 54 55 57 58 59
fator (75)
    on left: 60 61 62 63, on right: 56 57 58 59 63
variavel (76)
    on left: 64, on right: 32 60


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   17 lista_idents: IDENT .

    $default  reduce using rule 17 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   16 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   16 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    PROCEDURE  shift, and go to state 13

    $default  reduce using rule 5 ($@2)

    bloco                              go to state 14
    parte_declara_vars                 go to state 15
    $@2                                go to state 16
    parte_de_declaracao_de_subrotinas  go to state 17
    declaracao_de_procedimento         go to state 18


State 12

   16 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 16 (lista_idents)


State 13

   19 declaracao_de_procedimento: PROCEDURE . IDENT ABRE_PARENTESES parametros_formais FECHA_PARENTESES PONTO_E_VIRGULA bloco

    IDENT  shift, and go to state 19


State 14

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 20


State 15

    3 bloco: parte_declara_vars . comando_composto

    T_BEGIN  shift, and go to state 21

    comando_composto  go to state 22


State 16

    6 parte_declara_vars: $@2 . var

    VAR  shift, and go to state 23

    $default  reduce using rule 8 (var)

    var  go to state 24


State 17

    4 bloco: parte_de_declaracao_de_subrotinas .

    $default  reduce using rule 4 (bloco)


State 18

   18 parte_de_declaracao_de_subrotinas: declaracao_de_procedimento .

    $default  reduce using rule 18 (parte_de_declaracao_de_subrotinas)


State 19

   19 declaracao_de_procedimento: PROCEDURE IDENT . ABRE_PARENTESES parametros_formais FECHA_PARENTESES PONTO_E_VIRGULA bloco

    ABRE_PARENTESES  shift, and go to state 25


State 20

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


State 21

   24 comando_composto: T_BEGIN . comandos T_END

    NUMERO  shift, and go to state 26
    IDENT   shift, and go to state 27
    WHILE   shift, and go to state 28
    IF      shift, and go to state 29

    $default  reduce using rule 28 (comandos)

    comandos             go to state 30
    comando_sem_rotulo   go to state 31
    atribui              go to state 32
    comando_condicional  go to state 33
    if_then              go to state 34
    comando_repetitivo   go to state 35
    variavel             go to state 36


State 22

    3 bloco: parte_declara_vars comando_composto .

    $default  reduce using rule 3 (bloco)


State 23

    7 var: VAR . declara_vars

    $default  reduce using rule 11 ($@3)

    declara_vars  go to state 37
    declara_var   go to state 38
    $@3           go to state 39


State 24

    6 parte_declara_vars: $@2 var .

    $default  reduce using rule 6 (parte_declara_vars)


State 25

   19 declaracao_de_procedimento: PROCEDURE IDENT ABRE_PARENTESES . parametros_formais FECHA_PARENTESES PONTO_E_VIRGULA bloco

    VAR    shift, and go to state 40
    IDENT  shift, and go to state 7

    lista_idents              go to state 41
    parametros_formais        go to state 42
    secao_parametros_formais  go to state 43


State 26

   26 comandos: NUMERO . DOIS_PONTOS comando_sem_rotulo

    DOIS_PONTOS  shift, and go to state 44


State 27

   64 variavel: IDENT .

    $default  reduce using rule 64 (variavel)


State 28

   41 comando_repetitivo: WHILE . $@6 expressao DO $@7 T_BEGIN comandos T_END PONTO_E_VIRGULA

    $default  reduce using rule 39 ($@6)

    $@6  go to state 45


State 29

   35 if_then: IF . expressao $@4 THEN comando_sem_rotulo

    ABRE_PARENTESES  shift, and go to state 46
    SOMA             shift, and go to state 47
    SUBTRACAO        shift, and go to state 48
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    expressao    go to state 51
    exp_simples  go to state 52
    termo        go to state 53
    fator        go to state 54
    variavel     go to state 55


State 30

   24 comando_composto: T_BEGIN comandos . T_END
   27 comandos: comandos . PONTO_E_VIRGULA comandos

    PONTO_E_VIRGULA  shift, and go to state 56
    T_END            shift, and go to state 57


State 31

   25 comandos: comando_sem_rotulo .

    $default  reduce using rule 25 (comandos)


State 32

   29 comando_sem_rotulo: atribui .

    $default  reduce using rule 29 (comando_sem_rotulo)


State 33

   30 comando_sem_rotulo: comando_condicional .

    $default  reduce using rule 30 (comando_sem_rotulo)


State 34

   33 comando_condicional: if_then . cond_else

    ELSE  shift, and go to state 58

    $default  reduce using rule 38 (cond_else)

    cond_else  go to state 59


State 35

   31 comando_sem_rotulo: comando_repetitivo .

    $default  reduce using rule 31 (comando_sem_rotulo)


State 36

   32 atribui: variavel . ATRIBUICAO expressao

    ATRIBUICAO  shift, and go to state 60


State 37

    7 var: VAR declara_vars .
    9 declara_vars: declara_vars . declara_var

    IDENT     reduce using rule 11 ($@3)
    $default  reduce using rule 7 (var)

    declara_var  go to state 61
    $@3          go to state 39


State 38

   10 declara_vars: declara_var .

    $default  reduce using rule 10 (declara_vars)


State 39

   12 declara_var: $@3 . lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 62

    lista_id_var  go to state 63


State 40

   23 secao_parametros_formais: VAR . lista_idents DOIS_PONTOS IDENT

    IDENT  shift, and go to state 7

    lista_idents  go to state 64


State 41

   16 lista_idents: lista_idents . VIRGULA IDENT
   22 secao_parametros_formais: lista_idents . DOIS_PONTOS IDENT

    VIRGULA      shift, and go to state 10
    DOIS_PONTOS  shift, and go to state 65


State 42

   19 declaracao_de_procedimento: PROCEDURE IDENT ABRE_PARENTESES parametros_formais . FECHA_PARENTESES PONTO_E_VIRGULA bloco
   21 parametros_formais: parametros_formais . PONTO_E_VIRGULA secao_parametros_formais

    FECHA_PARENTESES  shift, and go to state 66
    PONTO_E_VIRGULA   shift, and go to state 67


State 43

   20 parametros_formais: secao_parametros_formais .

    $default  reduce using rule 20 (parametros_formais)


State 44

   26 comandos: NUMERO DOIS_PONTOS . comando_sem_rotulo

    IDENT  shift, and go to state 27
    WHILE  shift, and go to state 28
    IF     shift, and go to state 29

    comando_sem_rotulo   go to state 68
    atribui              go to state 32
    comando_condicional  go to state 33
    if_then              go to state 34
    comando_repetitivo   go to state 35
    variavel             go to state 36


State 45

   41 comando_repetitivo: WHILE $@6 . expressao DO $@7 T_BEGIN comandos T_END PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 46
    SOMA             shift, and go to state 47
    SUBTRACAO        shift, and go to state 48
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    expressao    go to state 69
    exp_simples  go to state 52
    termo        go to state 53
    fator        go to state 54
    variavel     go to state 55


State 46

   62 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 46
    SOMA             shift, and go to state 47
    SUBTRACAO        shift, and go to state 48
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    expressao    go to state 70
    exp_simples  go to state 52
    termo        go to state 53
    fator        go to state 54
    variavel     go to state 55


State 47

   51 exp_simples: SOMA . termo

    ABRE_PARENTESES  shift, and go to state 46
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    termo     go to state 71
    fator     go to state 54
    variavel  go to state 55


State 48

   52 exp_simples: SUBTRACAO . termo

    ABRE_PARENTESES  shift, and go to state 46
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    termo     go to state 72
    fator     go to state 54
    variavel  go to state 55


State 49

   63 fator: NOT . fator

    ABRE_PARENTESES  shift, and go to state 46
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    fator     go to state 73
    variavel  go to state 55


State 50

   61 fator: NUMERO .

    $default  reduce using rule 61 (fator)


State 51

   35 if_then: IF expressao . $@4 THEN comando_sem_rotulo

    $default  reduce using rule 34 ($@4)

    $@4  go to state 74


State 52

   42 expressao: exp_simples .
   43          | exp_simples . relacao exp_simples
   53 exp_simples: exp_simples . SOMA termo
   54            | exp_simples . SUBTRACAO termo
   55            | exp_simples . OR termo

    IGUAL           shift, and go to state 75
    DIFERENTE       shift, and go to state 76
    MENOR_QUE       shift, and go to state 77
    MAIOR_QUE       shift, and go to state 78
    MENOR_OU_IGUAL  shift, and go to state 79
    MAIOR_OU_IGUAL  shift, and go to state 80
    SOMA            shift, and go to state 81
    SUBTRACAO       shift, and go to state 82
    OR              shift, and go to state 83

    $default  reduce using rule 42 (expressao)

    relacao  go to state 84


State 53

   50 exp_simples: termo .
   57 termo: termo . PRODUTO fator
   58      | termo . DIVISAO fator
   59      | termo . AND fator

    PRODUTO  shift, and go to state 85
    DIVISAO  shift, and go to state 86
    AND      shift, and go to state 87

    $default  reduce using rule 50 (exp_simples)


State 54

   56 termo: fator .

    $default  reduce using rule 56 (termo)


State 55

   60 fator: variavel .

    $default  reduce using rule 60 (fator)


State 56

   27 comandos: comandos PONTO_E_VIRGULA . comandos

    NUMERO  shift, and go to state 26
    IDENT   shift, and go to state 27
    WHILE   shift, and go to state 28
    IF      shift, and go to state 29

    $default  reduce using rule 28 (comandos)

    comandos             go to state 88
    comando_sem_rotulo   go to state 31
    atribui              go to state 32
    comando_condicional  go to state 33
    if_then              go to state 34
    comando_repetitivo   go to state 35
    variavel             go to state 36


State 57

   24 comando_composto: T_BEGIN comandos T_END .

    $default  reduce using rule 24 (comando_composto)


State 58

   37 cond_else: ELSE . $@5 comando_sem_rotulo

    $default  reduce using rule 36 ($@5)

    $@5  go to state 89


State 59

   33 comando_condicional: if_then cond_else .

    $default  reduce using rule 33 (comando_condicional)


State 60

   32 atribui: variavel ATRIBUICAO . expressao

    ABRE_PARENTESES  shift, and go to state 46
    SOMA             shift, and go to state 47
    SUBTRACAO        shift, and go to state 48
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    expressao    go to state 90
    exp_simples  go to state 52
    termo        go to state 53
    fator        go to state 54
    variavel     go to state 55


State 61

    9 declara_vars: declara_vars declara_var .

    $default  reduce using rule 9 (declara_vars)


State 62

   15 lista_id_var: IDENT .

    $default  reduce using rule 15 (lista_id_var)


State 63

   12 declara_var: $@3 lista_id_var . DOIS_PONTOS tipo PONTO_E_VIRGULA
   14 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 91
    DOIS_PONTOS  shift, and go to state 92


State 64

   16 lista_idents: lista_idents . VIRGULA IDENT
   23 secao_parametros_formais: VAR lista_idents . DOIS_PONTOS IDENT

    VIRGULA      shift, and go to state 10
    DOIS_PONTOS  shift, and go to state 93


State 65

   22 secao_parametros_formais: lista_idents DOIS_PONTOS . IDENT

    IDENT  shift, and go to state 94


State 66

   19 declaracao_de_procedimento: PROCEDURE IDENT ABRE_PARENTESES parametros_formais FECHA_PARENTESES . PONTO_E_VIRGULA bloco

    PONTO_E_VIRGULA  shift, and go to state 95


State 67

   21 parametros_formais: parametros_formais PONTO_E_VIRGULA . secao_parametros_formais

    VAR    shift, and go to state 40
    IDENT  shift, and go to state 7

    lista_idents              go to state 41
    secao_parametros_formais  go to state 96


State 68

   26 comandos: NUMERO DOIS_PONTOS comando_sem_rotulo .

    $default  reduce using rule 26 (comandos)


State 69

   41 comando_repetitivo: WHILE $@6 expressao . DO $@7 T_BEGIN comandos T_END PONTO_E_VIRGULA

    DO  shift, and go to state 97


State 70

   62 fator: ABRE_PARENTESES expressao . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 98


State 71

   51 exp_simples: SOMA termo .
   57 termo: termo . PRODUTO fator
   58      | termo . DIVISAO fator
   59      | termo . AND fator

    PRODUTO  shift, and go to state 85
    DIVISAO  shift, and go to state 86
    AND      shift, and go to state 87

    $default  reduce using rule 51 (exp_simples)


State 72

   52 exp_simples: SUBTRACAO termo .
   57 termo: termo . PRODUTO fator
   58      | termo . DIVISAO fator
   59      | termo . AND fator

    PRODUTO  shift, and go to state 85
    DIVISAO  shift, and go to state 86
    AND      shift, and go to state 87

    $default  reduce using rule 52 (exp_simples)


State 73

   63 fator: NOT fator .

    $default  reduce using rule 63 (fator)


State 74

   35 if_then: IF expressao $@4 . THEN comando_sem_rotulo

    THEN  shift, and go to state 99


State 75

   44 relacao: IGUAL .

    $default  reduce using rule 44 (relacao)


State 76

   45 relacao: DIFERENTE .

    $default  reduce using rule 45 (relacao)


State 77

   46 relacao: MENOR_QUE .

    $default  reduce using rule 46 (relacao)


State 78

   47 relacao: MAIOR_QUE .

    $default  reduce using rule 47 (relacao)


State 79

   48 relacao: MENOR_OU_IGUAL .

    $default  reduce using rule 48 (relacao)


State 80

   49 relacao: MAIOR_OU_IGUAL .

    $default  reduce using rule 49 (relacao)


State 81

   53 exp_simples: exp_simples SOMA . termo

    ABRE_PARENTESES  shift, and go to state 46
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    termo     go to state 100
    fator     go to state 54
    variavel  go to state 55


State 82

   54 exp_simples: exp_simples SUBTRACAO . termo

    ABRE_PARENTESES  shift, and go to state 46
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    termo     go to state 101
    fator     go to state 54
    variavel  go to state 55


State 83

   55 exp_simples: exp_simples OR . termo

    ABRE_PARENTESES  shift, and go to state 46
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    termo     go to state 102
    fator     go to state 54
    variavel  go to state 55


State 84

   43 expressao: exp_simples relacao . exp_simples

    ABRE_PARENTESES  shift, and go to state 46
    SOMA             shift, and go to state 47
    SUBTRACAO        shift, and go to state 48
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    exp_simples  go to state 103
    termo        go to state 53
    fator        go to state 54
    variavel     go to state 55


State 85

   57 termo: termo PRODUTO . fator

    ABRE_PARENTESES  shift, and go to state 46
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    fator     go to state 104
    variavel  go to state 55


State 86

   58 termo: termo DIVISAO . fator

    ABRE_PARENTESES  shift, and go to state 46
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    fator     go to state 105
    variavel  go to state 55


State 87

   59 termo: termo AND . fator

    ABRE_PARENTESES  shift, and go to state 46
    NOT              shift, and go to state 49
    NUMERO           shift, and go to state 50
    IDENT            shift, and go to state 27

    fator     go to state 106
    variavel  go to state 55


State 88

   27 comandos: comandos . PONTO_E_VIRGULA comandos
   27         | comandos PONTO_E_VIRGULA comandos .

    PONTO_E_VIRGULA  shift, and go to state 56

    PONTO_E_VIRGULA  [reduce using rule 27 (comandos)]
    $default         reduce using rule 27 (comandos)


State 89

   37 cond_else: ELSE $@5 . comando_sem_rotulo

    IDENT  shift, and go to state 27
    WHILE  shift, and go to state 28
    IF     shift, and go to state 29

    comando_sem_rotulo   go to state 107
    atribui              go to state 32
    comando_condicional  go to state 33
    if_then              go to state 34
    comando_repetitivo   go to state 35
    variavel             go to state 36


State 90

   32 atribui: variavel ATRIBUICAO expressao .

    $default  reduce using rule 32 (atribui)


State 91

   14 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 108


State 92

   12 declara_var: $@3 lista_id_var DOIS_PONTOS . tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 109

    tipo  go to state 110


State 93

   23 secao_parametros_formais: VAR lista_idents DOIS_PONTOS . IDENT

    IDENT  shift, and go to state 111


State 94

   22 secao_parametros_formais: lista_idents DOIS_PONTOS IDENT .

    $default  reduce using rule 22 (secao_parametros_formais)


State 95

   19 declaracao_de_procedimento: PROCEDURE IDENT ABRE_PARENTESES parametros_formais FECHA_PARENTESES PONTO_E_VIRGULA . bloco

    PROCEDURE  shift, and go to state 13

    $default  reduce using rule 5 ($@2)

    bloco                              go to state 112
    parte_declara_vars                 go to state 15
    $@2                                go to state 16
    parte_de_declaracao_de_subrotinas  go to state 17
    declaracao_de_procedimento         go to state 18


State 96

   21 parametros_formais: parametros_formais PONTO_E_VIRGULA secao_parametros_formais .

    $default  reduce using rule 21 (parametros_formais)


State 97

   41 comando_repetitivo: WHILE $@6 expressao DO . $@7 T_BEGIN comandos T_END PONTO_E_VIRGULA

    $default  reduce using rule 40 ($@7)

    $@7  go to state 113


State 98

   62 fator: ABRE_PARENTESES expressao FECHA_PARENTESES .

    $default  reduce using rule 62 (fator)


State 99

   35 if_then: IF expressao $@4 THEN . comando_sem_rotulo

    IDENT  shift, and go to state 27
    WHILE  shift, and go to state 28
    IF     shift, and go to state 29

    comando_sem_rotulo   go to state 114
    atribui              go to state 32
    comando_condicional  go to state 33
    if_then              go to state 34
    comando_repetitivo   go to state 35
    variavel             go to state 36


State 100

   53 exp_simples: exp_simples SOMA termo .
   57 termo: termo . PRODUTO fator
   58      | termo . DIVISAO fator
   59      | termo . AND fator

    PRODUTO  shift, and go to state 85
    DIVISAO  shift, and go to state 86
    AND      shift, and go to state 87

    $default  reduce using rule 53 (exp_simples)


State 101

   54 exp_simples: exp_simples SUBTRACAO termo .
   57 termo: termo . PRODUTO fator
   58      | termo . DIVISAO fator
   59      | termo . AND fator

    PRODUTO  shift, and go to state 85
    DIVISAO  shift, and go to state 86
    AND      shift, and go to state 87

    $default  reduce using rule 54 (exp_simples)


State 102

   55 exp_simples: exp_simples OR termo .
   57 termo: termo . PRODUTO fator
   58      | termo . DIVISAO fator
   59      | termo . AND fator

    PRODUTO  shift, and go to state 85
    DIVISAO  shift, and go to state 86
    AND      shift, and go to state 87

    $default  reduce using rule 55 (exp_simples)


State 103

   43 expressao: exp_simples relacao exp_simples .
   53 exp_simples: exp_simples . SOMA termo
   54            | exp_simples . SUBTRACAO termo
   55            | exp_simples . OR termo

    SOMA       shift, and go to state 81
    SUBTRACAO  shift, and go to state 82
    OR         shift, and go to state 83

    $default  reduce using rule 43 (expressao)


State 104

   57 termo: termo PRODUTO fator .

    $default  reduce using rule 57 (termo)


State 105

   58 termo: termo DIVISAO fator .

    $default  reduce using rule 58 (termo)


State 106

   59 termo: termo AND fator .

    $default  reduce using rule 59 (termo)


State 107

   37 cond_else: ELSE $@5 comando_sem_rotulo .

    $default  reduce using rule 37 (cond_else)


State 108

   14 lista_id_var: lista_id_var VIRGULA IDENT .

    $default  reduce using rule 14 (lista_id_var)


State 109

   13 tipo: IDENT .

    $default  reduce using rule 13 (tipo)


State 110

   12 declara_var: $@3 lista_id_var DOIS_PONTOS tipo . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 115


State 111

   23 secao_parametros_formais: VAR lista_idents DOIS_PONTOS IDENT .

    $default  reduce using rule 23 (secao_parametros_formais)


State 112

   19 declaracao_de_procedimento: PROCEDURE IDENT ABRE_PARENTESES parametros_formais FECHA_PARENTESES PONTO_E_VIRGULA bloco .

    $default  reduce using rule 19 (declaracao_de_procedimento)


State 113

   41 comando_repetitivo: WHILE $@6 expressao DO $@7 . T_BEGIN comandos T_END PONTO_E_VIRGULA

    T_BEGIN  shift, and go to state 116


State 114

   35 if_then: IF expressao $@4 THEN comando_sem_rotulo .

    $default  reduce using rule 35 (if_then)


State 115

   12 declara_var: $@3 lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA .

    $default  reduce using rule 12 (declara_var)


State 116

   41 comando_repetitivo: WHILE $@6 expressao DO $@7 T_BEGIN . comandos T_END PONTO_E_VIRGULA

    NUMERO  shift, and go to state 26
    IDENT   shift, and go to state 27
    WHILE   shift, and go to state 28
    IF      shift, and go to state 29

    $default  reduce using rule 28 (comandos)

    comandos             go to state 117
    comando_sem_rotulo   go to state 31
    atribui              go to state 32
    comando_condicional  go to state 33
    if_then              go to state 34
    comando_repetitivo   go to state 35
    variavel             go to state 36


State 117

   27 comandos: comandos . PONTO_E_VIRGULA comandos
   41 comando_repetitivo: WHILE $@6 expressao DO $@7 T_BEGIN comandos . T_END PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 56
    T_END            shift, and go to state 118


State 118

   41 comando_repetitivo: WHILE $@6 expressao DO $@7 T_BEGIN comandos T_END . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 119


State 119

   41 comando_repetitivo: WHILE $@6 expressao DO $@7 T_BEGIN comandos T_END PONTO_E_VIRGULA .

    $default  reduce using rule 41 (comando_repetitivo)
